# maitri-bytom-website

./: .gitignore  README.md  astro.config.mjs  config.toml  opublikuj_zmiany.bat  package-lock.json  package.json  pobierz_najnowsze_zmiany.bat  sklonuj_projekt.bat  tsconfig.json
.github/workflows/: deploy.yml
cms_server/: Cargo.toml
cms_server/src/: main.rs
content/: Adopcja serca.md  Dzieci adopcyjne.md  Linki.md  O nas.md  _index.md  kontakt.md
content/Aktualności/: artykuł_4.md
content/Artykuły/: _index.md  artykuł_1.md
content/Zbiórki/: _index.md  zbiórka1.md
content/aktualnosci/: _index.md  artykuł_1.md  artykuł_2.md  artykuł_3.md  artykuł_4.md
content/sekcje_stopki/: sekcja1.md  sekcja2.md  sekcja3.md  sekcja4.md
content/strony_gornego_paska/: Adopcja serca.md  Dzieci adopcyjne.md  Kontakt.md  Linki.md  O nas.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: article.html  image_slider.html
netlify_cms/: .gitignore  config.yml  global.css  index.html  index_dev.html  index_github_resources.html  index_proxy.html  setup.js  tagUtils.js
netlify_cms/web_components/: web_components.js
page/: astro.config.mjs  package.json  tsconfig.json
public/: list.css
src/components/: Article.astro  ArticleListItem.astro  Footer.astro  Header.astro  ImageSlider.svelte  Menu.svelte  Pagination.astro  TransitioningImg.svelte  ZoomableImg.svelte
src/content/: index.md  instruction.md
static/: article.css  baseof.css  image_slider.css
web_components/: package.json  tsconfig.json  vite.config.ts
(+80 files in other folders)
