[package]
name = "cms_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = "0.11.14"
webbrowser = "0.8.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"